--- a/styles/NavLink.module.scss
+++ b/styles/NavLink.module.scss
@@ -7,6 +7,10 @@
     text-transform: uppercase;
   }
 
+  &:first-of-type {
+    margin-left: 0;
+  }
+
   &--active,
   &:hover {
     color: rgb(163, 163, 163);
