--- a/styles/Navigation.module.scss
+++ b/styles/Navigation.module.scss
@@ -1,7 +1,7 @@
 .navigation {
   display: flex;
   box-sizing: border-box;
-  padding: 15px;
+  padding: 7px 0;
   justify-content: space-between;
 
   a {
